@@ -3,6 +3,9 @@ Changelog
 
 9.5.dev0 - (unreleased)
 -----------------------
+* Change: cleaned dataservice.view.js of leftover jqzoom code and added basic info
+  about the intent of the file and it's external dependency
+  [ichimdav refs #27220]
 * Bugfix: Pillow 2.9.0 implemented eps patch, then it is not be needed and removed. Pin Pillow into version.cfg buildout
   [lucas, refs #21636]
 * Change: cleaned dataservice_styles.css of uneeded styles
